# capital-gains-calculation

./: main.py  pyproject.toml
cache/: exrates-monthly-0823.XML  exrates-monthly-0923.XML
utils/: exchange_rate.py  parsing.py
