[tool.poetry]
name = "personal_tax"
version = "0.1.0"
description = ""
authors = ["Ben Gazzard <ben@dartoxia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
